# llamadroid

./: .gitmodules  AGENTS.md  BLUEPRINT.md  DEV-PLAN.md  KANBAN.md  PRD.md  README.md  TODO.md  WORKLOG.md  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  embeddings.cpp  inference.cpp  jni_bridge.cpp  model_info.cpp  sampling.cpp
app/src/main/java/com/llamadroid/: LlamaDroidApp.kt  MainActivity.kt
app/src/main/java/com/llamadroid/core/: AppPreferences.kt  DatabaseModule.kt
app/src/main/java/com/llamadroid/data/huggingface/: HfApi.kt
app/src/main/java/com/llamadroid/data/models/: Conversation.kt  DownloadedModel.kt  Message.kt  RagChunk.kt  RagDocument.kt  SystemPrompt.kt
app/src/main/java/com/llamadroid/data/native/: NativeLib.kt
app/src/main/java/com/llamadroid/data/repository/: ConversationDao.kt  LlamaDatabase.kt  MessageDao.kt  ModelDao.kt  RagDao.kt  SystemPromptDao.kt
app/src/main/java/com/llamadroid/domain/chat/: ChatViewModel.kt  ConversationIO.kt
app/src/main/java/com/llamadroid/domain/inference/: ContextConfig.kt  InferenceEngine.kt  SamplingParams.kt
app/src/main/java/com/llamadroid/domain/media/: ImageAttachment.kt  SpeechRecognizer.kt  TtsManager.kt
app/src/main/java/com/llamadroid/domain/models/: DeviceTier.kt  DownloadManager.kt
app/src/main/java/com/llamadroid/domain/rag/: DocumentProcessor.kt  (+2 more)
app/src/main/java/com/llamadroid/service/: DownloadService.kt  NotificationHelper.kt  ServerService.kt  ServerTileService.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: architecture.md  decisions.md
gradle/: libs.versions.toml
(+24 files in other folders)
